WIP: moved to 'gorm' package
