# internal/api/user_routes.go
@@ -2,22 +2,12 @@ package api
 
 import (
 	"net/http"
-	"profbuh/internal/database"
 	"profbuh/internal/models"
 	"profbuh/internal/service"
 
 	"github.com/gin-gonic/gin"
+	"gorm.io/gorm"
 )
-
-type ApiClient struct {
-	db *database.Db
-}
-
-func NewApiClient(db *database.Db) *ApiClient {
-	return &ApiClient{
-		db: db,
-	}
-}
 
 // CreateUser godoc
 //
@@ -30,8 +20,9 @@ func NewApiClient(db *database.Db) *ApiClient {
 //	@Success		201		{object}	models.TokenResponse	"Created token for user"
 //	@Failure		400		{string}	string					"Bad request"
 //	@Router			/auth/user/create [post]
-func (api *ApiClient) CreateUser(c *gin.Context) {
+func CreateUser(c *gin.Context) {
 	var userData models.UserCreate
+	db := c.MustGet("db").(*gorm.DB)
 
 	err := c.ShouldBindJSON(&userData) // body -> json
 	if err != nil {
@@ -39,12 +30,12 @@ func (api *ApiClient) CreateUser(c *gin.Context) {
 		return
 	}
 
-	_, err = service.CreateUser(api.db.Pool, c.Request.Context(), userData)
+	_, err = service.CreateUser(db, c.Request.Context(), userData)
 	if err != nil {
 		c.JSON(http.StatusBadRequest, err.Error())
 		return
 	}
-	token, _ := service.AuthenticateUser(api.db.Pool, c.Request.Context(), models.UserLogin{Email: userData.Email, Password: userData.Password})
+	token, _ := service.AuthenticateUser(db, c.Request.Context(), models.UserLogin{Email: userData.Email, Password: userData.Password})
 
 	c.JSON(http.StatusCreated, models.TokenResponse{Token: token, TokeType: "bearer"})
 }
@@ -60,8 +51,9 @@ func (api *ApiClient) CreateUser(c *gin.Context) {
 //	@Success		200		{object}	models.TokenResponse	"Token"
 //	@Failure		401		{string}	string					"Unauthorized"
 //	@Router			/auth/user/login [post]
-func (api *ApiClient) LoginUser(c *gin.Context) {
+func LoginUser(c *gin.Context) {
 	var userData models.UserLogin
+	db := c.MustGet("db").(*gorm.DB)
 
 	err := c.ShouldBindJSON(&userData) // body -> json
 	if err != nil {
@@ -69,7 +61,7 @@ func (api *ApiClient) LoginUser(c *gin.Context) {
 		return
 	}
 
-	token, err := service.AuthenticateUser(api.db.Pool, c.Request.Context(), userData)
+	token, err := service.AuthenticateUser(db, c.Request.Context(), userData)
 	if err != nil {
 		c.JSON(http.StatusUnauthorized, err.Error())
 		return
