# internal/models/comment.go
@@ -13,10 +13,10 @@ type CommentCreate struct {
 //
 //	@Description	Comment db model
 type CommentDb struct {
-	Id        int
+	ID        int
 	Comment   string
-	RecordId  int
-	AuthorId  int
+	RecordID  int
+	AuthorID  int
 	CreatedAt time.Time
 }
 
@@ -24,7 +24,7 @@ type CommentDb struct {
 //
 //	@Description	Comment dto model
 type CommentDto struct {
-	Id        int       `json:"id" binding:"required" example:"1"`
+	ID        int       `json:"id" binding:"required" example:"1"`
 	Comment   string    `json:"comment" binding:"required" example:"sample comment"`
 	CreatedAt time.Time `json:"created_at" binding:"required" example:"2021-01-01T00:00:00Z"`
 }
